@@ -1,7 +1,8 @@
 package com.security;
 
-import java.util.Collections;
+import java.util.List;
 
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
@@ -21,11 +22,13 @@ public class CustomUserDetailsService implements UserDetailsService {
     @Override
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
         return userRepository.findByUsername(username)
-            .map(user -> new org.springframework.security.core.userdetails.User(
-                user.getUsername(),
-                user.getPasswordHash(),
-                Collections.emptyList()
-            ))
+            .map(user -> {
+            return new org.springframework.security.core.userdetails.User(
+                    user.getUsername(),
+                    user.getPasswordHash(),
+                    List.of(new SimpleGrantedAuthority(user.getRole()))
+            );
+        })
             .orElseThrow(() -> new UsernameNotFoundException("User not found: " + username));
     }
 }
